@@ -117,10 +117,19 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 njobs=$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 endif
 
+DIST := $(shell dpkg-parsechangelog -l debian/changelog  | sed -n 's/^Distribution: //p')
+
 %:
 	dh $@
 
 override_dh_auto_configure:
+	# verify that we're not accidentally uploading to stable-security without CVEs
+	@echo "$(DIST)" | grep -q -- '-security' && { \
+		dpkg-parsechangelog -l debian/changelog | grep -q 'CVE-' || { \
+			echo "ERROR: security upload with no CVEs listed. You should fix that."; \
+			exit 1; \
+		} \
+	} || true
 	# use system node w/out patching source; upstream hardcodes x64 in path
 	mkdir -p third_party/node/linux/node-linux-x64/bin
 	cp /usr/bin/node third_party/node/linux/node-linux-x64/bin
